# jovis-model

./: .gitignore  README.md  pyproject.toml  run.py  run.sh  test.ipynb  test.py
jovis_model/: config.py  data.py  module.py
jovis_model/_db/prompts/: ner.py
jovis_model/configs/: base.py  bedrock.py  config.py  klue.py  llm.py  mclip.py
jovis_model/datasets/: base.py  common.py  input.py  inputs.py
jovis_model/datasets/klue/: ner.py  utils.py  ynat.py
jovis_model/datasets/llm/: bedrock.py  chat.py  internvl.py  sentence_embedding.py
jovis_model/models/: base.py
jovis_model/models/klue/: base.py  ner.py  sequence_classification.py
jovis_model/models/llm/: bedrock.py  chat.py  internvl.py  mclip.py  sentence_embedding.py
jovis_model/runner/: base.py
jovis_model/utils/: helper.py  mapping.py  metric.py  module.py  report.py  train_utils.py
models/: helper.py  metric.py
models/itemcf/configs/: config.json
models/itemcf/modules/: dataset.py  inference.py  model.py  train.py
models/itemcf/utils/: helper.py
models/lightgcl/configs/: config.json
models/lightgcl/modules/: dataset.py  inference.py  model.py  train.py
models/lightgcl/utils/: helper.py
models/lightgcn/configs/: config.json
models/lightgcn/modules/: dataset.py  inference.py  model.py  train.py
models/lightgcn/utils/: helper.py
models/pinsage/configs/: config.json
notebooks/: Untitled.ipynb  Untitled1.ipynb  exp_bedrock.ipynb  exp_internVL.ipynb  exp_internVL_1.ipynb  exp_internVL_2.ipynb  exp_internVL_vs_CLIP.ipynb  exp_klue.ipynb  exp_llm_finetune.ipynb
(+71 files in other folders)
