[tool.poetry]
name = "jovis-model"
version = "0.1.0"
description = ""
authors = ["jovis-gnn <guni6895@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.2.1"
transformers = "^4.40.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
