[tool.poetry]
name = "jovis-model"
version = "0.1.0"
description = ""
authors = ["jovis-gnn <guni6895@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
torch = "2.2.1"
transformers = "^4.40.2"
pydantic = "^2.7.1"
sentencepiece = "^0.2.0"
peft = "^0.11.1"
einops = "^0.8.0"
vllm = "0.4.1"
packaging = "^24.0"
timm = "^1.0.3"
boto3 = "^1.34.111"
openai-clip = "^1.0.1"
wheel = "^0.43.0"
faiss-cpu = "^1.8.0"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
